--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ body {
 }
 
 .producto {
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -157,6 +157,7 @@ body {
     margin: 5px 0 10px;
     font-weight: 500;
     line-height: 1.3;
+    width: 410px;
 }
 
 .info-producto a {
@@ -185,6 +186,7 @@ footer {
     text-transform: uppercase;
     font-weight: bold;
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
+    margin-top: 50px;
 }
 
 .social-media {
@@ -233,6 +235,7 @@ footer {
 @media (max-width: 930px) {
     .grid { grid-template-columns: repeat(1, 1fr); }
     .producto { max-width: 90vw; }
+    .info-producto p { width: 80vw; }
     .imagen-principal img { width: 50vw; } 
     .imagenes-secundarias img { width: 30vw; }
 }
