--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,19 @@ body {
     color: #212121;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main { flex: 1; }
+
 .show { display: block !important; }
 .hidden { display: none !important; }
 
